<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityMain">

    <item android:id="@+id/action_presets" android:title="@string/app_menu_presets" android:icon="@drawable/btn_presets" android:orderInCategory="100" app:showAsAction="always"></item>
    <item android:id="@+id/action_find_size" android:title="@string/app_menu_find_size" android:icon="@drawable/btn_search" android:orderInCategory="200" app:showAsAction="always"></item>
    <item android:id="@+id/action_show_in_inch" android:title="@string/app_menu_in_inch" android:orderInCategory="300" android:checkable="true" app:showAsAction="never"/>
    <item android:id="@+id/action_info" android:title="@string/app_menu_info" android:orderInCategory="400" app:showAsAction="never"/>
    <item android:id="@+id/action_about" android:title="@string/app_menu_about" android:orderInCategory="900" app:showAsAction="never"/>
</menu>
