<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.tire.calc.smart.ActivitySearch">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/app_main"
        android:id="@+id/pnlSearchOptions">

        <Switch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_switch_lock_rim"
            android:id="@+id/chkLockRim"
            android:padding="@dimen/app_marging_options"
            android:textColor="@color/blueprint_tire_stroke" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/pnlLockRim"
            android:paddingLeft="@dimen/app_marging_options"
            android:paddingRight="@dimen/app_marging_options"
            android:paddingBottom="@dimen/app_marging_options">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_switch_lock_rim_size"
                android:id="@+id/txtLockRim"
                android:textColor="@color/blueprint_tire_stroke"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cmbLockRim"
                android:layout_weight="2" />
        </LinearLayout>

        <Switch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_switch_lock_width"
            android:id="@+id/chkLockWidth"
            android:padding="@dimen/app_marging_options"
            android:shadowColor="@color/blueprint_tire_stroke" />

        <Switch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_switch_lock_height"
            android:id="@+id/chkLockHieght"
            android:padding="@dimen/app_marging_options"
            android:visibility="gone" />

        <Switch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_switch_is_offroad"
            android:id="@+id/chkOffroad"
            android:padding="@dimen/app_marging_options"
            android:shadowColor="@color/blueprint_tire_stroke" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_btn_search"
                android:id="@+id/btnSearch"
                android:layout_margin="@dimen/app_marging_options"
                android:background="@color/app_accent"
                android:textColor="@color/app_background" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/pnlSearchResults"
        android:background="@color/app_main"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/app_marging_options"
            android:paddingTop="@dimen/app_marging_main"
            android:paddingBottom="@dimen/app_marging_main"
            android:paddingRight="@dimen/app_marging_main">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_result_size"
                android:id="@+id/textView"
                android:layout_weight="2"
                android:textSize="@dimen/search_result_text_size_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_result_width"
                android:id="@+id/textView2"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:textSize="@dimen/search_result_text_size_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_result_height"
                android:id="@+id/textView3"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:textSize="@dimen/search_result_text_size_title"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/lstTires"
            android:listSelector="@color/app_main_dark_semi"
            android:clickable="true"
            android:scrollingCache="true" />
    </LinearLayout>
</LinearLayout>
